descr docs part 2
