# middlewares/posts.middlewares.js
@@ -3,19 +3,33 @@ const {messageResponse, statusCodeResponse} = require('../constants');
 const ErrorHandler = require('../errors/errors.handler');
 
 module.exports = {
+    checkPostExist: async (req, res, next) => {
+        try {
+            const { post_id } = req.params;
+
+            const post = await Posts.findById(post_id).select('-__v');
+
+            if (!post) {
+                throw new ErrorHandler(messageResponse.POST_NOT_FOUND, statusCodeResponse.NOT_FOUND);
+            }
+
+            req.post = post;
+
+            next();
+        } catch (e) {
+            next(e);
+        }
+    },
     checkUserPost: async (req, res, next) => {
         try {
             const {user_id:{_id}} = req.user
-            console.log(_id);
             const post = await Posts.findOne({_id: req.params});
             const {user_id} = post;
-            console.log(typeof user_id._id);
-            console.log(typeof _id);
 
             if (_id.toString() !== user_id._id.toString()) {
                 throw new ErrorHandler(messageResponse.ACCESS_DENIED, statusCodeResponse.CONFLICT);
             }
-
+            req.post = post
             next();
         } catch (e) {
             next(e);
