# routes/posts.router.js
@@ -1,18 +1,23 @@
-const router = require('express').Router();
+const router = require('express')
+    .Router();
 
 const {postsController} = require('../controllers');
-const {authMiddlewares, universalMiddlewares, postMiddlewares} = require('../middlewares')
+const {authMiddlewares, universalMiddlewares, postMiddlewares, usersMiddlewares} = require('../middlewares');
 const {ACCESS} = require('../constants/tokens.type.enum');
 const {postValidator} = require('../validators');
 
 router.get('/', postsController.getAllPosts);
-router.get('/:user_id', postsController.getPostsByUser);
+router.get('/:user_id', usersMiddlewares.checkUserById, postsController.getPostsByUser);
+router.get('/:user_id/:post_id',
+    usersMiddlewares.checkUserById,
+    postMiddlewares.checkPostExist,
+    postsController.getPostById);
 
 router.use(authMiddlewares.checkToken(ACCESS));
-router.post('/create',
+router.post('/',
     universalMiddlewares.checkValidDataMiddleware(postValidator.addPost_validator),
     postsController.addPost);
-router.put('/update/:_id', postMiddlewares.checkUserPost, postsController.updatePost);
-router.delete('/delete/:_id', postMiddlewares.checkUserPost, postsController.deletePost);
+router.put('/:_id', postMiddlewares.checkUserPost, postsController.updatePost);
+router.delete('/:_id', postMiddlewares.checkUserPost, postsController.deletePost);
 
 module.exports = router;
